k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-microservice-template-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: node-service.anthony-allen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-microservice-template
            port:
              number: 80
